RESOLVED FIXED195749
REGRESSION (r242801): [iOS] preventDefault() on touchstart in a subframe does not prevent focusing the subframe
https://bugs.webkit.org/show_bug.cgi?id=195749
Summary REGRESSION (r242801): [iOS] preventDefault() on touchstart in a subframe does...
Wenson Hsieh
Reported 2019-03-14 10:16:01 PDT
This began after r242801, but it's really due to an existing (long-standing) bug wherein position information requests will change the focused frame: InteractionInformationAtPosition WebPage::positionInformation(const InteractionInformationRequest& request) { … if (!elementIsLinkOrImage) { HitTestResult result = m_page->mainFrame().eventHandler().hitTestResultAtPoint(request.point, HitTestRequest::ReadOnly | HitTestRequest::Active | HitTestRequest::DisallowUserAgentShadowContent | HitTestRequest::AllowChildFrameContent); hitNode = result.innerNode(); // Hit test could return HTMLHtmlElement that has no renderer, if the body is smaller than the document. if (hitNode && hitNode->renderer()) { RenderObject* renderer = hitNode->renderer(); m_page->focusController().setFocusedFrame(result.innerNodeFrame()); ^^^^^^^^^^^^^^^ This line in particular info.bounds = renderer->absoluteBoundingBoxRect(true); // We don't want to select blocks that are larger than 97% of the visible area of the document. …
Attachments
Patch (12.17 KB, patch)
2019-03-14 13:06 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-03-14 10:17:11 PDT
(In reply to Wenson Hsieh from comment #0) > > m_page->focusController().setFocusedFrame(result.innerNodeFrame()); > ^^^^^^^^^^^^^^^ > This line in particular ...it was added to fix <https://bugs.webkit.org/show_bug.cgi?id=128264>.
Radar WebKit Bug Importer
Comment 2 2019-03-14 10:50:28 PDT
Wenson Hsieh
Comment 3 2019-03-14 13:06:13 PDT
Wenson Hsieh
Comment 4 2019-03-14 13:08:13 PDT
This will bring back <rdar://problem/48020610>, but I have a different plan to make that work.
WebKit Commit Bot
Comment 5 2019-03-14 15:07:13 PDT
Comment on attachment 364677 [details] Patch Clearing flags on attachment: 364677 Committed r242968: <https://trac.webkit.org/changeset/242968>
WebKit Commit Bot
Comment 6 2019-03-14 15:07:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.